--- a/index.html
+++ b/index.html
@@ -9,16 +9,12 @@
 </head>
 <body>
     <div class="container">
-        <div class="box box1">1</div>
-        <div class="box box2">2</div>
-        <div class="box box3">3</div>
-        <div class="box box4">4</div>
-        <div class="box box5">5</div>
-        <div class="box box6">6</div>
-        <div class="box box7">7</div>
-        <div class="box box8">8</div>
-        <div class="box box9">9</div>
-        <div class="box box10">10</div>
+        <div class="box box1">one &#x26BD;</div>
+        <div class="box box2">two &#x26BE;</div>
+        <div class="box box3">three  &#127936;</div>
+        <div class="box box4">four &#x1F3D0;</div>
+        <div class="box box5">five  &#x1F3BE;</div>
+        <div class="box box6">six &#x1F3B1;</div>
     </div>
 </body>
 </html>
