Gulp and Autoprefixer added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="build/style.css">
 </head>
 <body>
     <div class="container">
         <div class="box box1">one &#x26BD;</div>
         <div class="box box2">two &#x26BE;</div>
+        <div class="box box3">three  &#127936;</div>
+        <div class="box box4">four &#x1F3D0;</div>
+        <div class="box box5">five  &#x1F3BE;</div>
+        <div class="box box6">six &#x1F3B1;</div>
     </div>
 </body>
 </html>
