--- a/index.html
+++ b/index.html
@@ -6,15 +6,24 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="build/style.css">
+    <script src="https://use.fontawesome.com/d8b44c4430.js"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="box box1">one &#x26BD;</div>
-        <div class="box box2">two &#x26BE;</div>
-        <div class="box box3">three  &#127936;</div>
-        <div class="box box4">four &#x1F3D0;</div>
-        <div class="box box5">five  &#x1F3BE;</div>
-        <div class="box box6">six &#x1F3B1;</div>
+    <div class="wrapper">
+        <nav class="flex-nav">
+            <ul>
+                <li><a href="#">Item 1</a></li>
+                <li><a href="#">Item 2</a></li>
+                <li><a href="#">Item 3</a></li>
+                <li><a href="#">Item 4</a></li>
+                <li><a href="#">Item 5</a></li>
+                <li><a href="#">Item 6</a></li>
+                <li class="social"><a href="http://www.facebook.com"><i class="fa fa-facebook"></i></a></li>
+                <li class="social"><a href="http://www.twitter.com"><i class="fa fa-twitter"></i></a></li>
+                <li class="social"><a href="http://www.github.com"><i class="fa fa-github"></i></a></li>
+                <li class="social"><a href="http://www.instagram.com"><i class="fa fa-instagram"></i></a></li>                
+            </ul>
+        </nav>
     </div>
 </body>
 </html>
