--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div class="wrapper">
+
+        <header class="top">
+            <h1><a href="#">What The Flexbox?!</a></h1>
+        </header>
         <nav class="flex-nav">
+            <a href="#" class="toggleNav"><i class="fa fa-bars" aria-hidden="true"></i> Menu</a>
             <ul>
                 <li><a href="#">Item 1</a></li>
                 <li><a href="#">Item 2</a></li>
@@ -24,6 +29,36 @@
                 <li class="social"><a href="http://www.instagram.com"><i class="fa fa-instagram"></i></a></li>                
             </ul>
         </nav>
+
+        <section class="hero">
+            <img src="http://lorempixel.com/1000/600/abstract" alt="image">
+        </section>
+
+        <section class="details">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nisi sequi autem nemo voluptatum numquam illum veniam, eum suscipit. Dolores unde, animi eum molestias eius cupiditate ut illum maiores accusantium fugit.</p>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci sint aliquam esse iure! Perspiciatis repellat veniam qui nemo, aliquid ex exercitationem error neque ducimus fugit sed? Vero quae architecto nesciunt!</p>
+        </section>
+
+        <section class="signup">
+            <form action="" class="signup">
+                <input type="text" placeholder="Your name">
+                <input type="email" placeholder="Email address">
+                <input type="submit" value="Sign me up!">
+            </form>
+        </section>
+
+        <footer>
+            <p>&copy; Jaime Mayorga</p>
+        </footer>
     </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script>
+        $(function() {
+            $('.toggleNav').on('click', function(){
+                $('.flex-nav ul').toggleClass('open');
+            });
+        });
+    </script>
 </body>
 </html>
