--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
 
         <section class="hero">
-            <img src="http://lorempixel.com/1000/600/abstract" alt="image">
+            <img src="./assets/image.jpeg" alt="image">
         </section>
 
         <section class="details">
