--- a/mobile.html
+++ b/mobile.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-    <link rel="stylesheet" href="build/style.css">
+    <title>Mobile example with Flexbox</title>
+    <link rel="stylesheet" href="build/style_mobile.css">
     <script src="https://use.fontawesome.com/d8b44c4430.js"></script>
 </head>
 <body>
